# libonvif_client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md
examples/curl/: CMakeLists.txt  curl_demo.cpp  curl_http_client.cpp  curl_http_client.h
examples/drogon/: CMakeLists.txt  demo.cpp  drogon_http_client.cpp  drogon_http_client.h
include/libonvif_client/: base_types.h  xml_convert.h
include/libonvif_client/client/: AnalyticsDevicePortClient.h  DeviceClient.h  EventClient.h  ImagingPortClient.h  Media2Client.h  MediaClient.h  PTZClient.h  RecordingPortClient.h  ReplayPortClient.h  RuleEnginePortClient.h  SearchPortClient.h  namespaces.h
include/libonvif_client/core/: http_client.h  onvif_callback.h  onvif_client.h  onvif_result.h  onvif_service_base.h
include/libonvif_client/types/: bd.h  common.h  fc.h  metadata.h  soap.h  tad.h  tan.h  tds.h  tev.h  timg.h  tptz.h  tr2.h  trc.h  trp.h  trt.h  tse.h  tt.h  wsa.h  wsnt.h  wsntw.h  wsrf_bf.h  wsrf_r.h  wsrf_rw.h  wstop.h  xmime.h  xop.h  xs.h
include/libonvif_client/utils/: common.h  date_time.h  logger.h
tools/wsdl_parser2/: CMakeLists.txt  README.md  USER_MANUAL.md  config.json
tools/wsdl_parser2/include/: client_generator.h  config.h  downloader.h  file_info.h  type_generator.h  type_utils.h  wsdl_parser.h
tools/wsdl_parser2/src/: client_generator.cpp  config.cpp  downloader.cpp  file_info.cpp  main.cpp  type_generator.cpp  type_utils.cpp  wsdl_parser.cpp
tools/wsdl_parser2/tests/: CMakeLists.txt  test_basic.cpp
